# force_absolute_imports

./: .bumpversion.cfg  .pre-commit-hooks.yaml  Makefile  README.md  force_absolute_imports.py  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  test.yml
force_absolute_imports/: __init__.py  __main__.py
tests/: test_cli.py  test_fix.py  test_raise_relative.py
unfixed_src/: bad.py  foo.py
unfixed_src/bad_module/: __init__.py  some.py
unfixed_src/good_module/: __init__.py
