[metadata]
name = force_absolute_imports
version = 0.11.0
description = tiny tool to force absolute imports in python code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/force_absolute_imports
author = Alexander Rodionov
author_email = tandav@tandav.me

[options]
py_modules = force_absolute_imports

[options.entry_points]
console_scripts =
    force_absolute_imports = force_absolute_imports:main
